--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "abhishek",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.17.1",
     "node-netflowv9": "^0.2.12"
   }
 }
